--- a/source/index.html
+++ b/source/index.html
@@ -54,6 +54,7 @@
           <img class="promo__image" src="img/boards-desktop.png" srcset="img/boards-desktop-2x.png 2x" width="705"
             height="515" alt="Печатные платы">
         </picture>
+        <a href="" class="promo__scroll-link">Скролл вниз</a>
       </section>
     </div>
   </header>
