Ренейминг лого в шапке, добавление лого в футере

--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
         <a href="" class="page-header__logo">
           <picture>
             <source media="(max-width: 767px)" srcset="img/logo-no-text.svg">
-            <img class="page-header__logo-image" src="img/logo-text.svg" width="202" height="52" alt="Smart Device">
+            <img class="page-header__logo-image" src="img/logo-text-header.svg" width="202" height="52" alt="Smart Device">
           </picture>
         </a>
         <div class="page-header__contacts contacts">
