--- a/source/index.html
+++ b/source/index.html
@@ -24,22 +24,22 @@
           <ul class="contacts__list">
             <li class="contacts__item">
               <a class="contacts__link contacts__link--email" href="#">
-                <svg role="img" width="19" height="14" viewBox="0 0 19 14">
+                <svg role="img" width="19" height="14" viewbox="0 0 19 14">
                   <use xlink:href="img/sprite_auto.svg#icon-mail"></use>
                 </svg>
                 info@sd.ru</a>
             </li>
             <li class="contacts__item">
               <a class="contacts__link contacts__link--phone" href="#">
-                <svg role="img" width="18" height="18" viewBox="0 0 18 18">
+                <svg role="img" width="18" height="18" viewbox="0 0 18 18">
                   <use xlink:href="img/sprite_auto.svg#icon-phone"></use>
                 </svg>
                 +7 (495) 000 52 52</a>
             </li>
           </ul>
           <button class="contacts__btn button" type="button">Заказать звонок</button>
-        </nav>
-      </div>
+        </div>
+      </nav>
     </div>
   </header>
   <main>
@@ -64,71 +64,81 @@
     </section>
   </main>
   <footer class="page-footer">
-    <div class="page-footer__wrapper">
-      <div class="page-footer__intro">
-        <a href="#" class="page-footer__logo">
-          <picture>
-            <source media="(max-width: 767px)" srcset="img/logo-no-text.svg">
-            <img class="page-footer__logo-image" src="img/logo-text-footer.svg" width="216" height="52"
-              alt="Smart Device">
-          </picture>
-        </a>
-        <ul class="page-footer__social social">
-          <li class="social__item">
-            <a class="social__link social__link--fb" href="#">
-              <svg role="img" width="27" height="27" viewBox="0 0 27 27">
-                <use xlink:href="img/sprite_auto.svg#icon-fb"></use>
-              </svg>
+    <div class="page-footer__top">
+      <div class="wrapper">
+        <div class="page-footer__columns">
+          <div class="page-footer__intro">
+            <a href="#" class="page-footer__logo">
+              <picture>
+                <source media="(max-width: 767px)" srcset="img/logo-no-text.svg">
+                <img class="page-footer__logo-image" src="img/logo-text-footer.svg" width="216" height="52"
+                  alt="Smart Device">
+              </picture>
             </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--ok" href="#">
-              <svg role="img" width="27" height="26" viewBox="0 0 27 26">
-                <use xlink:href="img/sprite_auto.svg#icon-ok"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--vk" href="#">
-              <svg role="img" width="27" height="26" viewBox="0 0 27 26">
-                <use xlink:href="img/sprite_auto.svg#icon-vk"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__columns">
-        <nav class="page-footer__col footer-col">
-          <h2 class="footer-col__title">Разделы сайта</h2>
-          <ul class="footer-col__list">
-            <li class="footer-col__item">О компании</li>
-            <li class="footer-col__item">Продукты</li>
-            <li class="footer-col__item">Производство печатных плат</li>
-            <li class="footer-col__item">Монтаж печатных плат</li>
-            <li class="footer-col__item">Комплектующие</li>
-            <li class="footer-col__item">Доставка</li>
-            <li class="footer-col__item">Контакты</li>
-          </ul>
-        </nav>
-        <div class="page-footer__col footer-col">
-          <h2 class="footer-col__title">Наш офис</h2>
-          <address class="footer-col__list">
-            <span class="footer-col__item">г. Мытищи, Олимпийский проспект, д.10</span>
-            <a class="footer-col__item" href="callto:+74955894050">+7 (495) 589-40-50</a>
-            <a class="footer-col__item" href="callto:+79250038767">+7 (925) 003-87-67</a>
-            <a class="footer-col__item" href="callto:+792692608079">7 (926) 926-080-79</a>
-          </address>
+            <ul class="page-footer__social social">
+              <li class="social__item">
+                <a class="social__link social__link--fb" href="#">
+                  <svg role="img" width="27" height="27" viewbox="0 0 27 27">
+                    <use xlink:href="img/sprite_auto.svg#icon-fb"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--ok" href="#">
+                  <svg role="img" width="27" height="26" viewbox="0 0 27 26">
+                    <use xlink:href="img/sprite_auto.svg#icon-ok"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--vk" href="#">
+                  <svg role="img" width="27" height="26" viewbox="0 0 27 26">
+                    <use xlink:href="img/sprite_auto.svg#icon-vk"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <nav class="page-footer__menu">
+            <h2 class="page-footer__title">Разделы сайта</h2>
+            <ul class="page-footer__list page-footer__list--cols">
+              <li><a href="#">О компании</a></li>
+              <li><a href="#">Продукты</a></li>
+              <li><a href="#">Производство печатных плат</a></li>
+              <li><a href="#">Монтаж печатных плат</a></li>
+              <li><a href="#">Комплектующие</a></li>
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </nav>
+          <div class="page-footer__contacts">
+            <h2 class="page-footer__title">Наш офис</h2>
+            <ul class="page-footer__list">
+              <li>г. Мытищи, Олимпийский проспект, д.10</li>
+              <li>
+                <a href="callto:+74955894050">+7 (495) 589-40-50</a>
+              </li>
+              <li>
+                <a href="callto:+79250038767">+7 (925) 003-87-67</a>
+              </li>
+              <li>
+                <a href="callto:+792692608079">+7 (926) 926-080-79</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-    <div class="page-footer__bottom copyright">
-      <span class="copyright__item">Все права защищены</span>
-      <span class="copyright__item">1999-2018 SD Service Devices</span>
-      <span class="copyright__item" <a class="copyright__link" ref="#">Условия конфиденциальности</a></span>
-      <span class="copyright__item">Developed by wow studio</span>
+    <div class="page-footer__copyright copyright">
+      <div class="copyright__inner wrapper">
+        <span class="copyright__rights">Все права защищены</span>
+        <span class="copyright__term">1999-2018 SD Service Devices</span>
+        <span class="copyright__conditions"><a href="#">Условия конфиденциальности</a></span>
+        <span class="copyright__dev">Developed by wow studio</span>
+      </div>
     </div>
   </footer>
-<script src="js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
