--- a/source/index.html
+++ b/source/index.html
@@ -40,7 +40,7 @@
       </div>
     </nav>
   </header>
-  <main>
+  <main style = "overflow: hidden;">
     <section class="promo">
       <h1 class="promo__title">Печатные платы</h1>
       <p class="promo__text">производство и монтаж, поставка комплектующих, блоков и модулей</p>
@@ -58,6 +58,54 @@
       </picture>
       <a href="" class="promo__scroll-link">Скролл вниз</a>
     </section>
+    <section class="advantages">
+      <h2 class="visually-hidden">Преимущества</h2>
+      <ul class="advantages__list">
+        <li class="advantages__item">
+          <div class="advantages__wrapper">
+            <div class="advantages__image-container"><svg class="advantages__image--stopwatch" role="img" width="29" height="35" viewbox="0 0 29 35">
+              <use xlink:href="img/sprite_auto.svg#icon-stopwatch"></use>
+            </svg>
+            </div>
+            <h3>Оперативные сроки</h3>
+            <p>Усовершенствованная логистическая система позволяет нам просчитывать&nbsp;стоимость, производить и доставлять
+              заказы плат и комплектующих в самые короткие сроки</p>
+          </div>
+        </li>
+        <li class="advantages__item">
+          <div class="advantages__wrapper">
+            <div class="advantages__image-container"><svg class="advantages__image--hired" role="img" width="35" height="35" viewbox="0 0 35 35">
+              <use xlink:href="img/sprite_auto.svg#icon-hired"></use>
+            </svg>
+            </div>
+            <h3>Крупные поставщики</h3>
+            <p>Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND.
+              Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.</p>
+          </div>
+        </li>
+        <li class="advantages__item">
+          <div class="advantages__wrapper">
+            <div class="advantages__image-container"><svg class="advantages__image--detective" role="img" width="36" height="31" viewbox="0 0 36 31">
+              <use xlink:href="img/sprite_auto.svg#icon-detective"></use>
+            </svg>
+            </div>
+            <h3>Полная конфиденциальность</h3>
+            <p>По желанию клиента мы обеспечиваем полную конфеденциальность.</p>
+          </div>
+        </li>
+        <li class="advantages__item">
+          <div class="advantages__wrapper">
+            <div class="advantages__image-container"><svg class="advantages__image--tag" role="img" width="35" height="35" viewbox="0 0 35 35">
+              <use xlink:href="img/sprite_auto.svg#icon-tag"></use>
+            </svg>
+            </div>
+            <h3>Персонализация стоимости</h3>
+            <p>Мы  подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас
+              устраивает.</p>
+          </div>
+        </li>
+      </ul>
+    </section>
   </main>
   <footer class="page-footer page-footer--nojs">
     <div class="page-footer__top">
@@ -65,7 +113,7 @@
         <div class="page-footer__intro">
           <a href="#" class="page-footer__logo">
             <img class="page-footer__logo-image" src="img/logo-text-footer.svg" width="216" height="52"
-                alt="Smart Device">
+              alt="Smart Device">
           </a>
           <span>1999-2018 SD Service Devices</span>
           <ul class="page-footer__social social">
