--- a/source/index.html
+++ b/source/index.html
@@ -10,101 +10,166 @@
 </head>
 
 <body>
-  <header class="page-header">
-    <nav class="page-header__nav">
-      <a href="" class="page-header__logo">
-        <picture>
-          <source media="(max-width: 767px)" srcset="img/logo-no-text.svg">
-          <img class="page-header__logo-image" src="img/logo-text-header.svg" width="202" height="52"
-            alt="Smart Device">
-        </picture>
-      </a>
-      <div class="page-header__contacts contacts">
-        <ul class="contacts__list">
-          <li class="contacts__item">
-            <a class="contacts__link contacts__link--email" href="#">
-              <svg role="img" width="19" height="14" viewbox="0 0 19 14">
-                <use xlink:href="img/sprite_auto.svg#icon-mail"></use>
-              </svg>
-              info@sd.ru</a>
+  <main>
+    <div class="top-background">
+      <header class="page-header">
+        <div class="page-header__wrapper">
+          <a href="" class="page-header__logo">
+            <picture>
+              <source media="(max-width: 767px)" srcset="img/logo-no-text.svg">
+              <img class="page-header__logo-image" src="img/logo-text-header.svg" width="202" height="52"
+                alt="Smart Device">
+            </picture>
+          </a>
+          <div class="page-header__contacts contacts">
+            <ul class="contacts__list">
+              <li class="contacts__item">
+                <a class="contacts__link contacts__link--email" href="#">
+                  <svg role="img" width="19" height="14" viewbox="0 0 19 14">
+                    <use xlink:href="img/sprite_auto.svg#icon-mail"></use>
+                  </svg>
+                  info@sd.ru</a>
+              </li>
+              <li class="contacts__item">
+                <a class="contacts__link contacts__link--phone" href="#">
+                  <svg role="img" width="18" height="18" viewbox="0 0 18 18">
+                    <use xlink:href="img/sprite_auto.svg#icon-phone"></use>
+                  </svg>
+                  +7 (495) 000 52 52</a>
+              </li>
+            </ul>
+            <button class="contacts__btn button" type="button">Заказать звонок</button>
+          </div>
+        </div>
+      </header>
+      <section class="promo">
+        <div class="promo__wrapper">
+          <h1 class="promo__title">Печатные платы</h1>
+          <p class="promo__text">производство и монтаж, поставка комплектующих, блоков и модулей</p>
+          <a href="#" class="promo__link button button--big">Получить бесплатную консультацию</a>
+          <picture>
+            <source type="image/webp" media="(max-width: 767px)"
+              srcset="img/boards-mobile.webp 1x, img/boards-mobile-2x.webp 2x">
+            <source type="image/webp" media="(max-width: 1023px)"
+              srcset="img/boards-tablet.webp 1x, img/boards-tablet-2x.webp 2x">
+            <source type="image/webp" srcset="img/boards-desktop.webp 1x, img/boards-desktop-2x.webp 2x">
+            <source media="(max-width: 1023px)" srcset="img/boards-tablet.png 1x, img/boards-tablet-2x.png 2x">
+            <source media="(max-width: 767px)" srcset="img/boards-mobile.png 1x, img/boards-mobile-2x.png 2x">
+            <img class="promo__image" src="img/boards-desktop.png" srcset="img/boards-desktop-2x.png 2x" width="705"
+              height="515" alt="Печатные платы">
+          </picture>
+          <a href="" class="promo__scroll-link">Скролл вниз</a>
+        </div>
+      </section>
+    </div>
+    <div class="middle-background">
+      <section class="advantages">
+        <div class="advantages__wrapper">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <ul class="advantages__list">
+            <li class="advantages__container">
+              <div class="advantages__item">
+                <div class="advantages__image-container">
+                  <svg class="advantages__image--stopwatch" role="img" width="29" height="35" viewbox="0 0 29 35">
+                    <use xlink:href="img/sprite_auto.svg#icon-stopwatch"></use>
+                  </svg>
+                </div>
+                <h3>Оперативные сроки</h3>
+                <p>Усовершенствованная логистическая система позволяет нам просчитывать&nbsp;стоимость, производить и
+                  доставлять
+                  заказы плат и комплектующих в самые короткие сроки</p>
+              </div>
+            </li>
+            <li class="advantages__container">
+              <div class="advantages__item">
+                <div class="advantages__image-container"><svg class="advantages__image--hired" role="img" width="35"
+                    height="35" viewbox="0 0 35 35">
+                    <use xlink:href="img/sprite_auto.svg#icon-hired"></use>
+                  </svg>
+                </div>
+                <h3>Крупные поставщики</h3>
+                <p class="advantages--marginfix">Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND.
+                  Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.</p>
+              </div>
+            </li>
+            <li class="advantages__container">
+              <div class="advantages__item">
+                <div class="advantages__image-container"><svg class="advantages__image--detective" role="img" width="36"
+                    height="31" viewbox="0 0 36 31">
+                    <use xlink:href="img/sprite_auto.svg#icon-detective"></use>
+                  </svg>
+                </div>
+                <h3>Полная конфиденциальность</h3>
+                <p>По желанию клиента мы обеспечиваем полную конфеденциальность.</p>
+              </div>
+            </li>
+            <li class="advantages__container">
+              <div class="advantages__item">
+                <div class="advantages__image-container"><svg class="advantages__image--tag" role="img" width="35"
+                    height="35" viewbox="0 0 35 35">
+                    <use xlink:href="img/sprite_auto.svg#icon-tag"></use>
+                  </svg>
+                </div>
+                <h3>Персонализация стоимости</h3>
+                <p>Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас
+                  устраивает.</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="about">
+        <div class="about__wrapper">
+          <div class="about__img-container">
+          <picture>
+            <source type="image/webp" media="(max-width: 1023px)"
+              srcset="img/2005-tablet.webp 1x, img/2005-tablet-2x.webp 2x">
+            <source type="image/webp" srcset="img/2005-desktop.webp 1x, img/2005-desktop-2x.webp 2x">
+            <source media="(max-width: 1023px)" srcset="img/2005-tablet.png 1x, img/2005-tablet-2x.png 2x">
+            <img class="about__image" src="img/2005-desktop.png" srcset="img/2005-desktop-2x.png 2x" width="220"
+              height="317" alt="Печатные платы">
+          </picture>
+          </div>
+          <div class="about__container">
+            <h3 class="about__title">О компании</h3>
+            <p class="about__text">Мы поставляем электронные комплектующие, производим печатные платы и предоставляем
+              мировые технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
+            <p class="about__text">Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE,
+              HOLGLITRONIC, REFOND. Печатные
+              платы и
+              комплектующие Service Devices применяются на предприятиях Российских Железных Дорог<span
+                class="about__excerpt">..</span><span class="about__wholetext"> (РЖД), РоссАвтоПрома (ВАЗ,
+                АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники
+                России.</span></p>
+            <a href="#" class="about__link button button--about">Подробнее</a>
+          </div>
+        </div>
+      </section>
+    </div>
+    <section class="production">
+      <div class="production__wrapper">
+        <h2 class="production__title">Service Device предлагает следующие товары и услуги</h2>
+        <ul class="production__list">
+          <li class="production__item production__item--production">
+            <a href="#">
+              <h3>Производство печатных плат</h3>
+              <div class="production__container"></div>
+            </a>
           </li>
-          <li class="contacts__item">
-            <a class="contacts__link contacts__link--phone" href="#">
-              <svg role="img" width="18" height="18" viewbox="0 0 18 18">
-                <use xlink:href="img/sprite_auto.svg#icon-phone"></use>
-              </svg>
-              +7 (495) 000 52 52</a>
+          <li class="production__item production__item--mounting">
+            <a href="#">
+              <h3>Монтаж печатных плат</h3>
+              <div class="production__container"></div>
+            </a>
+          </li>
+          <li class="production__item production__item--components">
+            <a href="#">
+              <h3>Комплектующие для светотехники</h3>
+              <div class="production__container"></div>
+            </a>
           </li>
         </ul>
-        <button class="contacts__btn button" type="button">Заказать звонок</button>
       </div>
-    </nav>
-  </header>
-  <main style = "overflow: hidden;">
-    <section class="promo">
-      <h1 class="promo__title">Печатные платы</h1>
-      <p class="promo__text">производство и монтаж, поставка комплектующих, блоков и модулей</p>
-      <a href="#" class="promo__link button button--big">Получить бесплатную консультацию</a>
-      <picture>
-        <source type="image/webp" media="(max-width: 1023px)"
-          srcset="img/boards-tablet.webp 1x, img/boards-tablet-2x.webp 2x">
-        <source type="image/webp" media="(max-width: 767px)"
-          srcset="img/boards-mobile.webp 1x, img/boards-mobile-2x.webp 2x">
-        <source type="image/webp" srcset="img/boards-desktop.webp 1x, img/boards-desktop-2x.webp 2x">
-        <source media="(max-width: 1023px)" srcset="img/boards-tablet.png 1x, img/boards-tablet-2x.png 2x">
-        <source media="(max-width: 767px)" srcset="img/boards-mobile.png 1x, img/boards-mobile-2x.png 2x">
-        <img class="promo__image" src="img/boards-desktop.png" srcset="img/boards-desktop-2x.png 2x" width="705"
-          height="515" alt="Печатные платы">
-      </picture>
-      <a href="" class="promo__scroll-link">Скролл вниз</a>
-    </section>
-    <section class="advantages">
-      <h2 class="visually-hidden">Преимущества</h2>
-      <ul class="advantages__list">
-        <li class="advantages__item">
-          <div class="advantages__wrapper">
-            <div class="advantages__image-container"><svg class="advantages__image--stopwatch" role="img" width="29" height="35" viewbox="0 0 29 35">
-              <use xlink:href="img/sprite_auto.svg#icon-stopwatch"></use>
-            </svg>
-            </div>
-            <h3>Оперативные сроки</h3>
-            <p>Усовершенствованная логистическая система позволяет нам просчитывать&nbsp;стоимость, производить и доставлять
-              заказы плат и комплектующих в самые короткие сроки</p>
-          </div>
-        </li>
-        <li class="advantages__item">
-          <div class="advantages__wrapper">
-            <div class="advantages__image-container"><svg class="advantages__image--hired" role="img" width="35" height="35" viewbox="0 0 35 35">
-              <use xlink:href="img/sprite_auto.svg#icon-hired"></use>
-            </svg>
-            </div>
-            <h3>Крупные поставщики</h3>
-            <p>Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND.
-              Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.</p>
-          </div>
-        </li>
-        <li class="advantages__item">
-          <div class="advantages__wrapper">
-            <div class="advantages__image-container"><svg class="advantages__image--detective" role="img" width="36" height="31" viewbox="0 0 36 31">
-              <use xlink:href="img/sprite_auto.svg#icon-detective"></use>
-            </svg>
-            </div>
-            <h3>Полная конфиденциальность</h3>
-            <p>По желанию клиента мы обеспечиваем полную конфеденциальность.</p>
-          </div>
-        </li>
-        <li class="advantages__item">
-          <div class="advantages__wrapper">
-            <div class="advantages__image-container"><svg class="advantages__image--tag" role="img" width="35" height="35" viewbox="0 0 35 35">
-              <use xlink:href="img/sprite_auto.svg#icon-tag"></use>
-            </svg>
-            </div>
-            <h3>Персонализация стоимости</h3>
-            <p>Мы  подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас
-              устраивает.</p>
-          </div>
-        </li>
-      </ul>
     </section>
   </main>
   <footer class="page-footer page-footer--nojs">
@@ -112,72 +177,74 @@
       <div class="page-footer__columns">
         <div class="page-footer__intro">
           <a href="#" class="page-footer__logo">
-            <img class="page-footer__logo-image" src="img/logo-text-footer.svg" width="216" height="52"
-              alt="Smart Device">
+            <img src="img/logo-text-footer.svg" width="216" height="52" alt="Smart Device">
           </a>
           <span>1999-2018 SD Service Devices</span>
-          <ul class="page-footer__social social">
-            <li class="social__item">
-              <a class="social__link social__link--fb" href="#">
+          <ul class="page-footer__social">
+            <li class="page-footer__social-item">
+              <a class="link" href="http://facebook.com">
                 <svg role="img" width="27" height="27" viewbox="0 0 27 27">
                   <use xlink:href="img/sprite_auto.svg#icon-fb"></use>
                 </svg>
+                Ссылка на Facebook
               </a>
             </li>
-            <li class="social__item">
-              <a class="social__link social__link--ok" href="#">
+            <li class="page-footer__social-item">
+              <a href="http://ok.ru">
                 <svg role="img" width="27" height="26" viewbox="0 0 27 26">
                   <use xlink:href="img/sprite_auto.svg#icon-ok"></use>
                 </svg>
+                Ссылка в Односклассники
               </a>
             </li>
-            <li class="social__item">
-              <a class="social__link social__link--vk" href="#">
+            <li class="page-footer__social-item">
+              <a href="http://vk.com">
                 <svg role="img" width="27" height="26" viewbox="0 0 27 26">
                   <use xlink:href="img/sprite_auto.svg#icon-vk"></use>
                 </svg>
+                Ссылка во Вконтакте
               </a>
             </li>
           </ul>
         </div>
-        <div class="page-footer__wrapper">
-          <nav class="page-footer__menu page-footer__col">
-            <h2 class="page-footer__title">Разделы сайта</h2>
-            <button class="page-footer__toggle page-footer__toggle--plus" type="button">Открыть/Закрыть</button>
-            <ul class="page-footer__list page-footer__list--cols page-footer__list--show">
-              <li><a href="#">О компании</a></li>
-              <li><a href="#">Продукты</a></li>
-              <li><a href="#">Производство печатных плат</a></li>
-              <li><a href="#">Монтаж печатных плат</a></li>
-              <li><a href="#">Комплектующие</a></li>
-              <li><a href="#">Доставка</a></li>
-              <li><a href="#">Контакты</a></li>
-            </ul>
-          </nav>
-          <div class="page-footer__contacts page-footer__col">
-            <h2 class="page-footer__title">Наш офис</h2>
-            <button class="page-footer__toggle page-footer__toggle--plus" type="button">Открыть/Закрыть</button>
-            <ul class="page-footer__list">
-              <li>г. Мытищи, Олимпийский проспект, д.10</li>
-              <li>
-                <a href="callto:+74955894050">+7 (495) 589-40-50</a>
-              </li>
-              <li>
-                <a href="callto:+79250038767">+7 (925) 003-87-67</a>
-              </li>
-              <li>
-                <a href="callto:+792692608079">+7 (926) 926-080-79</a>
-              </li>
-            </ul>
-          </div>
+        <div class="page-footer__col page-footer__col--menu">
+          <h3>Разделы сайта</h3>
+          <button class="page-footer__toggle page-footer__toggle--plus" type="button">Открыть/Закрыть</button>
+          <ul class="page-footer__list page-footer__list--cols page-footer__list--show">
+            <li><a href="#">О компании</a></li>
+            <li><a href="#">Продукты</a></li>
+            <li><a href="#">Производство печатных плат</a></li>
+            <li><a href="#">Монтаж печатных плат</a></li>
+            <li><a href="#">Комплектующие</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </div>
+        <div class="page-footer__col page-footer__col--contacts">
+          <h3>Наш офис</h3>
+          <button class="page-footer__toggle page-footer__toggle--plus" type="button">Открыть/Закрыть</button>
+          <ul class="page-footer__list">
+            <li>г. Мытищи, Олимпийский проспект, д.10</li>
+            <li>
+              <a href="callto:+74955894050">+7 (495) 589-40-50</a>
+            </li>
+            <li>
+              <a href="callto:+79250038767">+7 (925) 003-87-67</a>
+            </li>
+            <li>
+              <a href="callto:+792692608079">+7 (926) 926-080-79</a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
     <div class="page-footer__copyright copyright">
-      <span class="copyright__rights">Все права защищены</span>
-      <span class="copyright__term">1999-2018 SD Service Devices</span>
-      <span class="copyright__conditions"><a href="#">Условия конфиденциальности</a></span>
-      <span class="copyright__dev">Developed by wow studio</span>
+      <div class="copyright__wrapper">
+        <span class="copyright__rights">Все права защищены</span>
+        <span class="copyright__term">1999-2018 SD Service Devices</span>
+        <span class="copyright__conditions"><a href="#">Условия конфиденциальности</a></span>
+        <span class="copyright__dev">Developed by wow studio</span>
+      </div>
     </div>
   </footer>
   <script src="js/script.js"></script>
