--- a/source/index.html
+++ b/source/index.html
@@ -70,44 +70,41 @@
       <section class="advantages" id="advantages">
         <div class="advantages__wrapper">
           <h2 class="visually-hidden">Преимущества</h2>
-          <ul class="advantages__list">
-            <li class="advantages__item">
-              <svg class="advantages__image advantages__image--stopwatch" role="img" width="29" height="35"
-                viewbox="0 0 29 35">
-                <use xlink:href="img/sprite_auto.svg#icon-stopwatch" aria-label="Часы"></use>
-              </svg>
-              <h3>Оперативные сроки</h3>
-              <p>Усовершенствованная логистическая система позволяет нам просчитывать&nbsp;стоимость, производить и
-                доставлять
-                заказы плат и комплектующих в самые короткие сроки</p>
-            </li>
-            <li class="advantages__item">
-              <svg class="advantages__image advantages__image--hired" role="img" width="35" height="35"
-                viewbox="0 0 35 35" aria-label="Поставщики">
-                <use xlink:href="img/sprite_auto.svg#icon-hired"></use>
-              </svg>
-              <h3>Крупные поставщики</h3>
-              <p>Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND.
-                Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.</p>
-            </li>
-            <li class="advantages__item">
-              <svg class="advantages__image advantages__image--detective" role="img" width="36" height="31"
-                viewbox="0 0 36 31" aria-label="Детектив">
-                <use xlink:href="img/sprite_auto.svg#icon-detective"></use>
-              </svg>
-              <h3>Полная конфиденциальность</h3>
-              <p>По желанию клиента мы обеспечиваем полную конфеденциальность.</p>
-            </li>
-            <li class="advantages__item">
-              <svg class="advantages__image advantages__image--tag" role="img" width="35" height="35"
-                viewbox="0 0 35 35">
-                <use xlink:href="img/sprite_auto.svg#icon-tag" aria-label="Ценник"></use>
-              </svg>
-              <h3>Персонализация стоимости</h3>
-              <p>Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас
-                устраивает.</p>
-            </li>
-          </ul>
+          <div class="advantages__item">
+            <svg class="advantages__image advantages__image--stopwatch" role="img" width="29" height="35"
+              viewbox="0 0 29 35">
+              <use xlink:href="img/sprite_auto.svg#icon-stopwatch" aria-label="Часы"></use>
+            </svg>
+            <h3>Оперативные сроки</h3>
+            <p>Усовершенствованная логистическая система позволяет нам просчитывать&nbsp;стоимость, производить и
+              доставлять
+              заказы плат и комплектующих в самые короткие сроки</p>
+          </div>
+          <div class="advantages__item">
+            <svg class="advantages__image advantages__image--hired" role="img" width="35" height="35"
+              viewbox="0 0 35 35" aria-label="Поставщики">
+              <use xlink:href="img/sprite_auto.svg#icon-hired"></use>
+            </svg>
+            <h3>Крупные поставщики</h3>
+            <p>Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND.
+              Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.</p>
+          </div>
+          <div class="advantages__item">
+            <svg class="advantages__image advantages__image--detective" role="img" width="36" height="35"
+              viewbox="0 0 36 35" aria-label="Детектив">
+              <use xlink:href="img/sprite_auto.svg#icon-detective"></use>
+            </svg>
+            <h3>Полная конфиденциальность</h3>
+            <p>По желанию клиента мы обеспечиваем полную конфеденциальность.</p>
+          </div>
+          <div class="advantages__item">
+            <svg class="advantages__image advantages__image--tag" role="img" width="35" height="35" viewbox="0 0 35 35">
+              <use xlink:href="img/sprite_auto.svg#icon-tag" aria-label="Ценник"></use>
+            </svg>
+            <h3>Персонализация стоимости</h3>
+            <p>Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас
+              устраивает.</p>
+          </div>
         </div>
       </section>
       <section class="about">
