--- a/source/index.html
+++ b/source/index.html
@@ -110,12 +110,18 @@
       <section class="about">
         <div class="about__wrapper">
           <div class="about__img-container">
+            <picture>
+              <source type="image/webp" srcset="img/2005.webp 1x, img/2005-2x.webp 2x">
+              <source srcset="img/2005.png 1x, img/2005-2x.png 2x">
+              <img src="img/2005.png" srcset="img/2005-2x.png 2x" width="114"
+                height="304" alt="2005 год">
+            </picture>
           </div>
           <div class="about__container">
-            <h3 class="about__title">О компании</h3>
-            <p class="about__text">Мы поставляем электронные комплектующие, производим печатные платы и предоставляем
+            <h3>О компании</h3>
+            <p>Мы поставляем электронные комплектующие, производим печатные платы и предоставляем
               мировые технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
-            <p class="about__text">Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE,
+            <p>Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE,
               HOLGLITRONIC, REFOND. Печатные
               платы и
               комплектующие Service Devices применяются на предприятиях Российских Железных Дорог<span
