--- a/source/index.html
+++ b/source/index.html
@@ -113,8 +113,7 @@
             <picture>
               <source type="image/webp" srcset="img/2005.webp 1x, img/2005-2x.webp 2x">
               <source srcset="img/2005.png 1x, img/2005-2x.png 2x">
-              <img src="img/2005.png" srcset="img/2005-2x.png 2x" width="114"
-                height="304" alt="2005 год">
+              <img src="img/2005.png" srcset="img/2005-2x.png 2x" width="114" height="304" alt="2005 год">
             </picture>
           </div>
           <div class="about__container">
@@ -136,23 +135,24 @@
     <section class="production">
       <div class="production__wrapper">
         <h2 class="production__title">Service Device предлагает следующие товары и услуги</h2>
-        <ul class="production__list">
-          <li class="production__item production__item--product">
-            <a href="#">
-              <h3>Производство печатных плат</h3>
-            </a>
-          </li>
-          <li class="production__item production__item--mount">
-            <a href="#">
-              <h3>Монтаж печатных плат</h3>
-            </a>
-          </li>
-          <li class="production__item production__item--light">
-            <a href="#">
-              <h3>Комплектующие для светотехники</h3>
-            </a>
-          </li>
-        </ul>
+        <a class="production__item production__item--product" href="#">
+            <p>Производство печатных плат</p>
+            <svg width="63" height="63" viewbox="0 0 63 63">
+              <use xlink:href="img/sprite_auto.svg#icon-square-link" aria-label="Ccылка"></use>
+            </svg>
+        </a>
+        <a class="production__item production__item--mount" href="#">
+            <p>Монтаж печатных плат</p>
+            <svg width="63" height="63" viewbox="0 0 63 63">
+              <use xlink:href="img/sprite_auto.svg#icon-square-link" aria-label="Ccылка"></use>
+            </svg>
+        </a>
+        <a class="production__item production__item--light" href="#">
+            <p>Комплектующие для светотехники</p>
+            <svg width="63" height="63" viewbox="0 0 63 63">
+              <use xlink:href="img/sprite_auto.svg#icon-square-link" aria-label="Ccылка"></use>
+            </svg>
+        </a>
       </div>
     </section>
     <section class="callback" id="callback">
