--- a/source/index.html
+++ b/source/index.html
@@ -196,7 +196,7 @@
           </ul>
         </div>
         <div class="page-footer__col page-footer__col--menu">
-          <h3 class="page-footer__toggle page-footer__toggle--plus">Разделы сайта</h3>
+          <h3 class="page-footer__toggle">Разделы сайта</h3>
           <ul class="page-footer__list page-footer__list--cols page-footer__list--show">
             <li><a href="#">О компании</a></li>
             <li><a href="#">Продукты</a></li>
@@ -208,7 +208,7 @@
           </ul>
         </div>
         <div class="page-footer__col page-footer__col--contacts">
-          <h3 class="page-footer__toggle page-footer__toggle--plus">Наш офис</h3>
+          <h3 class="page-footer__toggle">Наш офис</h3>
           <address class="page-footer__list  page-footer__list--show">
             <span>г. Мытищи, Олимпийский проспект, д.10</span>
             <a href="tel:+74955894050">+7 (495) 589-40-50</a>
